📍 Add routes for refresh token and logout
